[project]
name = "agenticml"
version = "0.1.0"
description = "Autoresearch-style harness for iterative tabular ML improvement"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.5",
    "kaggle>=1.6",
    "torch>=2.7,<2.10",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
